@@ -3,11 +3,12 @@ CHANGELOG
 MANIFEST.in
 Makefile
 README.txt
+example.py
 gpl-3.0.txt
 nmap.html
 setup.py
 nmap/__init__.py
-nmap/example.py
 nmap/nmap.py
 nmap/t.py
 nmap/t2.py
+nmap/t3.py
