@@ -3,3 +3,4 @@ include CHANGELOG
 include Makefile
 include nmap.html
 include MANIFEST.in
+include example.py
