@@ -1,5 +1,9 @@
 Changelog
 =========
+2013/11/04 (v0.3.3)
+ - moving file example.py
+ - adding function convert_nmap_output_to_encoding
+
 2013/09/23 (v0.3.2)
  - adding acces to CPE values under [host][proto][port]['cpe'] key
 
